--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="hidden" id="index">
         </div>
         <button id="add" class="btn-add" onclick="addNew()">Submit</button>
-        <button id="save" onclick="changeStudent()" style="display : none">Update</button>
+        <button id="save" onclick="changeStudent()" style="display : none; margin-left: 6px;">Update</button>
     </div>
 
     <div class="table">
